content/v1.4.5/zh/api/campaign/GarrisonRecruitmentCampaignBehavior.md
---
title: "GarrisonRecruitmentCampaignBehavior"
description: "GarrisonRecruitmentCampaignBehavior 的自动生成类参考。"
---
# GarrisonRecruitmentCampaignBehavior

**Namespace:** TaleWorlds.CampaignSystem.CampaignBehaviors
**Module:** TaleWorlds.CampaignSystem
**Type:** `public class GarrisonRecruitmentCampaignBehavior : CampaignBehaviorBase, IGarrisonRecruitmentBehavior`
**Base:** `CampaignBehaviorBase`
**File:** `bin/TaleWorlds.CampaignSystem/TaleWorlds.CampaignSystem.CampaignBehaviors/GarrisonRecruitmentCampaignBehavior.cs`

## 概述

`GarrisonRecruitmentCampaignBehavior` 位于 `TaleWorlds.CampaignSystem.CampaignBehaviors`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `TaleWorlds.CampaignSystem.CampaignBehaviors` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要方法

### VolunteerTroop
`public struct VolunteerTroop(Hero ownerNotable, int notableVolunteerArrayIndex)`

**用途 / Purpose:** **用途 / Purpose:** 调用 VolunteerTroop 对应的操作。

```csharp
// 先通过子系统 API 拿到 GarrisonRecruitmentCampaignBehavior 实例
GarrisonRecruitmentCampaignBehavior garrisonRecruitmentCampaignBehavior = ...;
var result = garrisonRecruitmentCampaignBehavior.VolunteerTroop(ownerNotable, 0);
```

### CompareTo
`public int CompareTo(object obj)`

**用途 / Purpose:** **用途 / Purpose:** 将当前对象与传入实例比较大小或顺序。

```csharp
// 先通过子系统 API 拿到 GarrisonRecruitmentCampaignBehavior 实例
GarrisonRecruitmentCampaignBehavior garrisonRecruitmentCampaignBehavior = ...;
var result = garrisonRecruitmentCampaignBehavior.CompareTo(obj);
```

### RegisterEvents
`public override void RegisterEvents()`

**用途 / Purpose:** **用途 / Purpose:** 将events注册到当前系统，以便后续监听或分发。

```csharp
// 先通过子系统 API 拿到 GarrisonRecruitmentCampaignBehavior 实例
GarrisonRecruitmentCampaignBehavior garrisonRecruitmentCampaignBehavior = ...;
garrisonRecruitmentCampaignBehavior.RegisterEvents();
```

### GetGarrisonChangeExplainedNumber
`public ExplainedNumber GetGarrisonChangeExplainedNumber(Town town)`

**用途 / Purpose:** **用途 / Purpose:** 读取并返回当前对象中 garrison change explained number 的结果。

```csharp
// 先通过子系统 API 拿到 GarrisonRecruitmentCampaignBehavior 实例
GarrisonRecruitmentCampaignBehavior garrisonRecruitmentCampaignBehavior = ...;
var result = garrisonRecruitmentCampaignBehavior.GetGarrisonChangeExplainedNumber(town);
```

### SyncData
`public override void SyncData(IDataStore dataStore)`

**用途 / Purpose:** **用途 / Purpose:** 将data同步到相关上下文或系统中。

```csharp
// 先通过子系统 API 拿到 GarrisonRecruitmentCampaignBehavior 实例
GarrisonRecruitmentCampaignBehavior garrisonRecruitmentCampaignBehavior = ...;
garrisonRecruitmentCampaignBehavior.SyncData(dataStore);
```

## 使用示例

```csharp
// 通常从对应子系统 API 获取实例后调用
GarrisonRecruitmentCampaignBehavior garrisonRecruitmentCampaignBehavior = ...;
garrisonRecruitmentCampaignBehavior.VolunteerTroop(ownerNotable, 0);
```

## 参见

- [本区域目录](../)